style.css
.container {
    
}

.content {
    width: 85%;
}

/* Navbar styling */

nav {
    background-color: hsl(347, 79%, 43%);
    color: white;
    position: fixed;
    width: 15%;
    right: 0; 
    height: 100vh;
    text-align: right;
    display: grid;
    grid-template-columns: 0.1fr 1fr 0.1fr;
    font-size: 1.1rem;
}

nav ul {
    grid-column-start: 2;
    margin: auto;
    width: 100%;
}

nav li {
    margin: 10%;
}

nav a {
    text-decoration: none;
    color: white;
}

nav a:hover {
    border-bottom: 4px gray solid;
}

nav a:focus {
    border-bottom: 4px gray solid;
}



/* Full image container CSS */
.full-image  {
    
}

.full-image .hero {
background-image: url("./img/hero-jess-watters-unsplash.jpg");
background-repeat:no-repeat;
background-size:cover;

}

.full-image .team {

}

/* Sections 1-6 */

#section1-home {
height: 90vh;
border: 2px solid red;
background: 
    linear-gradient(
        rgba(255, 0, 0, 0.45), 
        rgba(150, 45, 150, 0.45)
    ),
    url("./img/hero-jess-watters-unsplash.jpg");
background-repeat:no-repeat;
background-size:cover;
}

#section2-about {
height: 90vh;
 border: 2px solid red;
 display: grid;
 grid-template-columns: 1fr 1fr;
}

#right {
    grid-column-start: 2;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
}

#logo {
    width: 100%;
    height: auto;
    grid-row-start: 2;
}

#section3-team {
    height: 90vh;
    border: 2px solid red;
    background: 
        linear-gradient(
            rgba(255, 0, 0, 0.45), 
            rgba(150, 45, 150, 0.45)
        ),
        url("./img/teamphoto.jpg");
    background-repeat:no-repeat;
    background-size:100%;
}

#section4-profiles1 {
    height: 90vh;
    border: 2px solid red;

}

#section5-profiles2 {
    height: 90vh;
    border: 2px solid red;

}

#section6-contact {
    height: 90vh;
    display: grid;
    grid-template-rows: 0.2fr 1fr 0.2fr;
    grid-template-columns: 0.3fr 1fr 0.3fr;
    background: 
    linear-gradient(
        rgba(255, 0, 0, 0.45), 
        rgba(150, 45, 150, 0.45)
    ),
    url("./img/contactmap.jpg");
background-repeat:no-repeat;
background-size:cover;
}

/* this is only in here to reduce size of team images to make easier to sort grid layout */
img {
    width: 100%;
    height: 100%;
}




.halves {
    border: 2px dotted black;

}


.quarters {
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
    height: 100%;
    width: 100%;
    overflow: hidden;
}


/* CONTACT FORM STYLING */

/* use grid and frs to align all the form elements*/

.form {
    background: rgb(137, 137, 137);
    width: 100%;
    height: 100%;
    grid-row-start: 2;
    grid-column-start: 2;
    box-shadow: 0 0 20px 0 rgba(72, 94, 116, 0.7);
    border-radius: 2%;
    padding: 1rem;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 20px;
}

.form label {
    display: block;
}

.form p {
    margin: 0;
}

#email {

}

#number {

}

#msg {

}


#submit {
    display: block;
    grid-column-start: 0;
    grid-column-end: 2;
}

.background-image {
    border: 2px dotted black;
    background-repeat:no-repeat;
    background-size:cover;
    background-position: center center;
}

.team-text {
    border: 2px dotted black;
}

#armand {
    background-image: url("img/armand.jpg");
}

#nathalie {
    background-image: url("img/nathalie.jpg");
}

#kate {
    background-image: url("img/kate.jpg");
}

#joe {
    background-image: url("img/joe.jpg");
}

